proxmox/talos_cluster/02-argocd/bootstrap-apps/apps/gateway/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster-gateway
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare-dns-issuer
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "192.168.0.130"
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-argocd
      hostname: "argocd.local.example.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: argo-tls
            kind: Secret  
            group: ""
